fix horizontal scroll

--- a/app/globals.css
+++ b/app/globals.css
@@ -148,16 +148,14 @@
 	--color-sidebar-ring: var(--sidebar-ring);
 }
 
-body {
-	letter-spacing: var(--tracking-normal);
-}
-
 html {
 	scroll-behavior: smooth;
+	overflow-x: hidden;
 }
 
 body {
 	letter-spacing: var(--tracking-normal);
+	overflow-x: hidden;
 }
 
 @layer base {
